--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "rap2hpoutre/laravel-log-viewer": "^0.8.0",
         "rych/random": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "rap2hpoutre/laravel-log-viewer": "^0.8.0"
     },
     "autoload": {
         "classmap": [
